--- a/asvz_project/ASVZ_APP/templates/dashboard.html
+++ b/asvz_project/ASVZ_APP/templates/dashboard.html
@@ -20,7 +20,7 @@
                     {% for status in statuses %}
                     <tr class="hover:bg-gray-100 transition duration-200">
                         <td class="py-2 px-4">{{ status.status|yesno:"Aan,Uit" }}</td>
-                        <td class="py-2 px-4">{{ status.timestamp }}</td>
+                        <td class="py-2 px-4">{{ status.timestamp|date:"D, d M Y H:i:s" }}</td>
                     </tr>
                     {% endfor %}
                 </tbody>
